# clinical_summarization

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  config.yaml  main.py  params.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main.yaml
clinical_summary/: __init__.py  config.py  dataset.py  features.py
clinical_summary/modeling/: predict.py  train.py
clinical_summary/pipeline/: prediction.py  stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_data_transformation.py  stage_04_model_training.py  stage_05_model_evaluation.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1.0_mk_data_ingestion.ipynb  2.0_mk_data_validation.ipynb  3.0_mk_data_transformation.ipynb  4.0_mk_model_training.ipynb  5.0_mk_model_evaluation.ipynb  Text_Summarization.ipynb
static/: style.css
templates/: index.html
