[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "clinical_summary"
version = "0.0.1"
description = "This project employs a transformer model to summarize clinical patient reports."
authors = [
  { name = "Manorama Kadwani" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11"
